# ChatSimulator

./: CMakeLists.txt  README.md  chat_view.cpp  chat_view.h  chat_view.ui  main.cpp  server.cpp  server.h  server_window.cpp  server_window.h  server_window.qrc  server_window.ui  user.cpp  user.h  users_storage.cpp  users_storage.h
